# database-mcp

./: .gitignore  README.md  pyproject.toml  start_server.sh
config/: tools.yaml
src/: main.py
src/config/: loader.py  models.py
src/database/: connection_manager.py  db_engine.py  factory.py  mysql_engine.py  oracle_engine.py  postgres_engine.py
src/mcp_server/: fastmcp_server.py
